--- a/device-types/Alcatel-Lucent/OS6870-24.yaml
+++ b/device-types/Alcatel-Lucent/OS6870-24.yaml
@@ -8,7 +8,7 @@ weight: 5.27
 weight_unit: kg
 is_full_depth: false
 airflow: front-to-rear
-
+comments: 1/1/25 & 1/1/26 VFL-Ports
 console-ports:
   - name: Console
     type: rj-45
@@ -17,10 +17,14 @@ power-ports:
     type: iec-60320-c14
     maximum_draw: 250
     allocated_draw: 101
+    label: OS6870-BP
+    description: Primary Hot-Swap PSU
   - name: PS2
     type: iec-60320-c14
     maximum_draw: 250
     allocated_draw: 101
+    label: OS6870-BP
+    description: Backup Hot-Swap PSU
 interfaces:
   - name: 1/1/1
     type: 1000base-x-sfp
